[gd_scene load_steps=12 format=3 uid="uid://4hcg017hfqs2"]

[ext_resource type="Script" path="res://Scripts/Puzzles/cube.gd" id="1_qucsk"]
[ext_resource type="PackedScene" uid="uid://c58wp21fdm1ms" path="res://Scenes/Components/grab_area.tscn" id="2_pkcgs"]
[ext_resource type="Texture2D" uid="uid://bb3a0hm2fistx" path="res://Assets/Player/Corpse.png" id="2_wdjeq"]
[ext_resource type="Texture2D" uid="uid://03cy6usdldja" path="res://Assets/Player/Corpse_n.png" id="3_4cvo5"]
[ext_resource type="PackedScene" uid="uid://blmgllq4y7p7x" path="res://Scenes/Components/mass_area.tscn" id="4_do4g6"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_th5vv"]
friction = 0.3

[sub_resource type="CanvasTexture" id="CanvasTexture_mkd2l"]
diffuse_texture = ExtResource("2_wdjeq")
normal_texture = ExtResource("3_4cvo5")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hwrml"]
size = Vector2(49, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_qanf0"]
radius = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ixvus"]
size = Vector2(32, 14.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u64xs"]
size = Vector2(26, 16)

[node name="corpse" type="RigidBody2D"]
collision_layer = 8
collision_mask = 59
physics_material_override = SubResource("PhysicsMaterial_th5vv")
freeze_mode = 1
script = ExtResource("1_qucsk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("CanvasTexture_mkd2l")

[node name="GrabArea" parent="." instance=ExtResource("2_pkcgs")]
angular_damp_space_override = 1
angular_damp = 1000.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
position = Vector2(0.5, -8)
shape = SubResource("RectangleShape2D_hwrml")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(12, -4)
shape = SubResource("CircleShape2D_qanf0")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(-13, -4)
shape = SubResource("CircleShape2D_qanf0")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.75)
shape = SubResource("RectangleShape2D_ixvus")

[node name="MassArea" parent="." instance=ExtResource("4_do4g6")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MassArea"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_u64xs")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-3.49691e-07, -8)
target_position = Vector2(9.53674e-07, 21)
collision_mask = 3
hit_from_inside = true

[connection signal="body_entered" from="GrabArea" to="." method="_on_grab_area_body_entered"]
[connection signal="body_exited" from="GrabArea" to="." method="_on_grab_area_body_exited"]
[connection signal="body_entered" from="MassArea" to="." method="_on_mass_area_body_entered"]
[connection signal="body_exited" from="MassArea" to="." method="_on_mass_area_body_exited"]
